--- a/style.css
+++ b/style.css
@@ -9,30 +9,21 @@ body{
 }
 .cell{
     background-color:white;
-    width: 50px;
     height: 18vmin;
     width: 18vmin;
    border-radius: 1rem;
-   border: none;
+   border:none;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 1);
    font-size: 8vmin;
+   cursor: pointer;
 }
-.container{
+table{
  height: 70vh;  
  display: flex;
 justify-content: center;
 align-items: center;
+}
 
-}
-.game{
-    height: 60vmin;
-    width: 60vmin;
-    display: flex;
-    flex-wrap:wrap ;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5vmin;
-}
 #reset{
     padding: 1rem;
     font-size: 1.25rem;
@@ -40,28 +31,37 @@ align-items: center;
     color: aliceblue;
     border-radius: 1rem;
     border: none;
-}
-#newgame{
-    padding: 1rem;
-    font-size: 1.25rem;
-    background-color: #191913;
-    color: aliceblue;
-    border-radius: 1rem;
-    border: none;
-}
-#msg{
-    color: white;
-    font-size: 5vmin;
-}
-.msg-container{
-    height: 100vmin;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    flex-direction: column;
+    cursor: pointer;
 }
 
-.hide{
+.endgame{
     display: none;
+    width: 200px;
+    top:120px ;
+   background-color: black;
+    position: absolute;
+    left: 50%;
+   
+    margin-left:-100px ;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 2rem;
+}
+
+.endgame button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    background-color: #548687;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.endgame button:hover {
+    background-color: #445e61;
 }
